--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -165,6 +165,23 @@ jobs:
         with:
           terraform_version: "1.7.0"
 
+      - name: 'Terraform Init'
+        run: |
+          cd terraform-test
+          terraform init
+
+      - name: 'Terraform Plan'
+        run: |
+          cd terraform-test
+          terraform plan -var="support_email=${{ secrets.SUPPORT_EMAIL }}"
+
+      - name: 'Terraform Apply'
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: |
+          cd terraform-test
+          terraform apply -auto-approve \
+                         -var="support_email=${{ secrets.SUPPORT_EMAIL }}"
+
       - name: 'Verify Secrets'
         run: |
           echo "Checking required secrets..."
