--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -165,6 +165,12 @@ jobs:
         with:
           terraform_version: "1.7.0"
 
+      - name: 'Generate SSH Key'
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keygen -t rsa -b 4096 -f ~/.ssh/id_rsa -N ""
+          cat ~/.ssh/id_rsa.pub
+
       - name: 'Terraform Init'
         run: |
           cd terraform-test
