--- a/.github/workflows/terraform-destroy.yaml
+++ b/.github/workflows/terraform-destroy.yaml
@@ -12,6 +12,9 @@ jobs:
     name: 'Terraform Destroy'
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v1'
 
@@ -31,7 +34,8 @@ jobs:
           terraform plan -destroy \
             -var="support_email=${{ secrets.SUPPORT_EMAIL }}" \
             -var="iap_authorized_users=[\"user:${EMAIL}\"]" \
-            -var="github_repo=${{ github.repository }}"
+            -var="github_repo=${{ github.repository }}" \
+            -var="user_email=${{ secrets.AUTHORIZED_USER }}"
 
       - name: 'Terraform Destroy'
         run: |
@@ -41,4 +45,5 @@ jobs:
           terraform destroy -auto-approve \
             -var="support_email=${{ secrets.SUPPORT_EMAIL }}" \
             -var="iap_authorized_users=[\"user:${EMAIL}\"]" \
-            -var="github_repo=${{ github.repository }}" 
+            -var="github_repo=${{ github.repository }}" \
+            -var="user_email=${{ secrets.AUTHORIZED_USER }}" 
