--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -165,6 +165,11 @@ jobs:
         with:
           terraform_version: "1.7.0"
 
+      - name: 'Force Unlock State'
+        run: |
+          cd terraform-test
+          terraform force-unlock -force 1745340528397292
+
       - name: 'Generate SSH Key'
         run: |
           mkdir -p ~/.ssh
