--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -249,22 +249,30 @@ jobs:
               --command="nc -w 120 %h %p"
           EOF
           
-          # Get cluster credentials through the bastion
+          # Get cluster credentials
           gcloud container clusters get-credentials $CLUSTER_NAME \
             --region $CLUSTER_REGION \
             --project $PROJECT_ID \
             --internal-ip
           
-          # Update kubeconfig to use the bastion as a proxy
+          # Get the cluster's internal endpoint
+          CLUSTER_ENDPOINT=$(gcloud container clusters describe $CLUSTER_NAME \
+            --region $CLUSTER_REGION \
+            --project $PROJECT_ID \
+            --format='get(privateClusterConfig.privateEndpoint)')
+          
+          # Update kubeconfig to use the cluster's internal endpoint
           kubectl config set-cluster gke_${PROJECT_ID}_${CLUSTER_REGION}_${CLUSTER_NAME} \
-            --server=https://$BASTION_IP:6443 \
+            --server=https://$CLUSTER_ENDPOINT:443 \
             --insecure-skip-tls-verify=true
           
-          # Set up kubectl to use the bastion as a proxy
-          export HTTPS_PROXY="socks5://127.0.0.1:1080"
-          
           # Start SSH tunnel in the background
-          ssh -f -N -D 1080 bastion
+          ssh -f -N -L 6443:$CLUSTER_ENDPOINT:443 bastion
+          
+          # Update kubeconfig to use local port
+          kubectl config set-cluster gke_${PROJECT_ID}_${CLUSTER_REGION}_${CLUSTER_NAME} \
+            --server=https://127.0.0.1:6443 \
+            --insecure-skip-tls-verify=true
           
           # Verify cluster access
           kubectl get nodes
@@ -273,7 +281,6 @@ jobs:
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
           cd terraform-test
-          export HTTPS_PROXY="socks5://127.0.0.1:1080"
           kubectl create namespace argocd --dry-run=client -o yaml | kubectl apply -f -
 
       - name: 'Install ArgoCD'
@@ -281,7 +288,6 @@ jobs:
         run: |
           cd terraform-test
           PROJECT_ID="sylvan-apogee-450014-a6"
-          export HTTPS_PROXY="socks5://127.0.0.1:1080"
           
           # Add ArgoCD Helm repository
           helm repo add argo https://argoproj.github.io/argo-helm
